test/2-errors/trace.ploy
<let-fn f [-n]
  if n
    <scope
      { (f (isub n 1))
        void}>
    unbound;>

(f 5)
